welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:26: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:32: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:42: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:52: error: not found: value dogHouse
		dogHouse();		
                ^